# MuJoCoTrainer

./: .gitignore  CMakeLists.txt  MuJoCoTrainer.sln  MuJoCoTrainer.vcxproj  MuJoCoTrainer.vcxproj.filters
include/: config.hpp  controller.hpp  evolution.hpp  kernel.cuh  simulation.hpp
src/: controller.cpp  evolution.cpp  kernel.cu  main.cpp  simulation.cpp
